# Hosty

./: .gitignore  CONTRIBUTING.md  README.md  hosty.py  meson.build  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-artifacts.yml
data/: io.github.sugarycandybar.Hosty.metainfo.xml  meson.build
hosty/: entry.py  factory.py  i18n.py  meson.build  win_ipc.py
hosty/gtk_ui/: application.py  style.css  window.py
hosty/gtk_ui/dialogs/: about.py  create_server.py  icon_picker.py  manage_playit_tunnel.py  playit_setup.py  preferences.py  shortcuts.py
hosty/gtk_ui/views/: console_view.py  performance_view.py  properties_view.py  server_detail.py  sidebar.py  welcome_view.py
hosty/qt_ui/: application.py
hosty/qt_ui/mixins/: connect_mixin.py  properties_mixin.py
hosty/qt_ui/pages/: modrinth_page.py
hosty/shared/backend/: download_manager.py  java_manager.py  modrinth_client.py  platforms.py  playit_manager.py  server_manager.py  server_process.py
hosty/shared/utils/: constants.py  tray_windows.py  windows_instance.py
hosty/winui_ui/: App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PythonBackendClient.cs
hosty/winui_ui/Dialogs/: CreateServerDialog.xaml.cs
hosty/winui_ui/Pages/: AboutPage.xaml  AboutPage.xaml.cs  ServerDetailPage.xaml  (+3 more)
packaging/flatpak/: io.github.sugarycandybar.Hosty.yml
packaging/linux/: io.github.sugarycandybar.Hosty.metainfo.xml  meson.build
packaging/windows/: hosty.iss
po/: LINGUAS  POTFILES  POTFILES.skip  hosty.pot  meson.build  pl.po
(+11 files in other folders)
